--- a/views/index.html
+++ b/views/index.html
@@ -9,20 +9,21 @@
   <h2>Create a new note below:</h2>
   <input type='text' id="textbox" placeholder="Start typing...">
   <input type='button' onclick="addEntry()" value ='Create Note'>
-  <input type='button' onclick="viewEntries()" value ='View Notes'>
+  <input type='button' onclick="megaEntries()" value ='View Notes'>
  <h2>View Your Exising Notes:</h2>
  <h3 id="demo"> </h3>
 
  
 
  <script>
-  var entries = ["note", "note_2", "note_3"]
+  var entries = []
  function addEntry(note) {
     note = document.getElementById("textbox").value;
     entries.push(note);
     console.log(entries)
   }
 
+function megaEntries() {
   var txt = "";
   entries.forEach(viewEntries);
   document.getElementById("demo").innerHTML = txt;
@@ -30,7 +31,7 @@
   function viewEntries(value, index, array) {
     txt = txt + value + "<br>"; 
   }
-
+}
 
 </script>
 
