--- a/views/index.html
+++ b/views/index.html
@@ -2,47 +2,41 @@
 <html>
 
 <head>
+  <script defer src='interface.js'></script>
+  <script src="../src/note.js"></script>
+  <script src="../src/notebook.js"></script>
 </head>
 
 <body>
   <h1>Welcome To Your Notebook!</h1>
   <h2>Create a new note below:</h2>
-  <input type='text' id="textbox" placeholder="Start typing...">
-  <input type='button' onclick="addEntry()" value ='Create Note'>
-  <input type='button' onclick="megaEntries()" value ='View Notes'>
- <h2>View Your Exising Notes:</h2>
- <h3 id="demo"> </h3>
+  <textarea id="textbox" cols="30" rows="10" placeholder="Start typing..."></textarea>
+  <button id="create-button">Create Note</button>
+  <h2>View Your Exising Notes:</h2>
+  <div id="notes"> </div>
 
- 
+</body>
 
- <script>
-  var entries = []
- function addEntry(note) {
-    note = document.getElementById("textbox").value;
-    entries.push(note);
-    console.log(entries)
-  }
+</html>
+
+
+
+
+
+
+<!-- var entries = []
+function addEntry(note) {
+   note = document.getElementById("textbox").value;
+   entries.push(note);
+   console.log(entries)
+ }
 
 function megaEntries() {
-  var txt = "";
-  entries.forEach(viewEntries);
-  document.getElementById("demo").innerHTML = txt;
+ var txt = "";
+ entries.forEach(viewEntries);
+ document.getElementById("demo").innerHTML = txt;
 
-  function viewEntries(value, index, array) {
-    txt = txt + value + "<br>"; 
-  }
-}
-
-</script>
-
-
-
- <script type="text/javascript" src="../src/note.js"></script>
- <script type="text/javascript" src="../src/notebook.js"></script>
-</body>
-
-</html>
-
-</body>
-
-</html>
+ function viewEntries(value, index, array) {
+   txt = txt + value + "<br>"; 
+ }
+} -->
