select note with id

--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
   <button id="create-button">Create Note</button>
   <h2>View Your Exising Notes:</h2>
   <div id="notes"> </div>
+  <div id='full-note-text'> </div>
 
 </body>
 
@@ -37,6 +38,6 @@ function megaEntries() {
  document.getElementById("demo").innerHTML = txt;
 
  function viewEntries(value, index, array) {
-   txt = txt + value + "<br>"; 
+   txt = txt + value + "<br>";
  }
 } -->
