added hide content feature

--- a/views/index.html
+++ b/views/index.html
@@ -8,12 +8,15 @@
 </head>
 
 <body>
+  <div id="main-body">
   <h1>Welcome To Your Notebook!</h1>
   <h2>Create a new note below:</h2>
   <textarea id="textbox" cols="30" rows="10" placeholder="Start typing..."></textarea>
   <button id="create-button">Create Note</button>
   <h2>View Your Exising Notes:</h2>
   <div id="notes"> </div>
+</div>
+
   <div id='full-note-text'> </div>
 
 </body>
