added back button functionality, incomplete

--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,8 @@
   <div id="notes"> </div>
 </div>
 
+
+<button id="back-button" hidden>Back</button>
   <div id='full-note-text'> </div>
 
 </body>
